--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
         </div>
       </div>
     </footer>
+    <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
