--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       </section>
       <!-- Prezentacja -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
         <h2 class="section__txt">Czym się zajmujemy</h2>
         <ul class="about">
@@ -365,10 +365,10 @@
           </ul>
         </div>
       </div>
-      </section>
+      </section> -->
     </main>
     <!-- Stopka -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div>
         <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
@@ -427,9 +427,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- Modal -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
           <svg class="modal__close-x">
@@ -466,7 +466,7 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
