--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="WebStudio" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,90 +25,100 @@
         <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
         <nav class="navigation">
           <ul class="menu">
-            <li class="menu__item current"><a class="menu__link" href="./index.html">Agencja</a></li>
-            <li class="menu__item"><a class="menu__link" href="./portfolio.html">Portfolio</a></li>
-            <li class="menu__item"><a class="menu__link" href="./kontakt">Kontakt</a></li>
+            <li class="menu__item current">
+              <a class="menu__link" href="./index.html">Agencja</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="./kontakt">Kontakt</a>
+            </li>
           </ul>
         </nav>
         <div class="contact">
           <ul class="contact-list">
             <li>
-            <a class="contact-list__link" href="mailto:info@devstudio.com">
-              <svg class="contact__icon" width="16" height="12">
-                <use href="./images/icons.svg#envelope"></use>
-              </svg>info@mdevstudio.com</a></li>
+              <a class="contact-list__link" href="mailto:info@devstudio.com">
+                <svg class="contact__icon" width="16" height="12">
+                  <use href="./images/icons.svg#envelope"></use></svg>info@mdevstudio.com</a>
+            </li>
             <li>
-            <a class="contact-list__link" href="tel:+48111111111">
-              <svg class="contact__icon" width="10" height="16">
-                <use href="./images/icons.svg#phone"></use>
-              </svg>+48 111 111 111</a>
+              <a class="contact-list__link" href="tel:+48111111111">
+                <svg class="contact__icon" width="10" height="16">
+                  <use href="./images/icons.svg#phone"></use></svg>+48 111 111 111</a>
             </li>
           </ul>
         </div>
+        <button type="button" class="menu__mobile-btn" menu-mobile-open><svg class="menu__mobile-icon"><use href="./images/icons.svg#mobile-menu"></use></svg></button>
       </div>
     </header>
     <!-- Strona -->
     <main>
       <div class="head-info">
-        <h1 class="head-info__txt">EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</h1>
-        <button type="button" class="main-button" data-modal-open>Zamów usługe</button>
+        <h1 class="head-info__txt">
+          EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU
+        </h1>
+        <button type="button" class="main-button" data-modal-open>
+          Zamów usługe
+        </button>
       </div>
       <section class="section">
-      <div class="container">
-        <ul class="news">
-        <li class="news__item">
-          <div class="news__icon">
-          <svg width="70" height="70">
-            <use href="./images/icons.svg#antenna"></use>
-          </svg>
-          </div>
-          <p class="news__title">LOREM IPSUM</p>
-          <p class="news__txt">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li class="news__item">
-          <div class="news__icon">
-          <svg width="70" height="70">
-            <use href="./images/icons.svg#clock"></use>            
-          </svg>
-          </div>
-          <p class="news__title">LOREM IPSUM</p>
-          <p class="news__txt">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li class="news__item">
-          <div class="news__icon">
-          <svg width="70" height="70">
-            <use href="./images/icons.svg#diagram"></use>
-          </svg>
-          </div>          
-          <p class="news__title">LOREM IPSUM</p>
-          <p class="news__txt">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li class="news__item">
-          <div class="news__icon">
-          <svg width="70" height="70">
-            <use href="./images/icons.svg#astronaut"></use>
-          </svg>
-          </div>          
-          <p class="news__title">LOREM IPSUM</p>
-          <p class="news__txt">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        </ul>
-      </div>
+        <div class="container">
+          <ul class="news">
+            <li class="news__item">
+              <div class="news__icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
+              <p class="news__title">LOREM IPSUM</p>
+              <p class="news__txt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="news__item">
+              <div class="news__icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
+              <p class="news__title">LOREM IPSUM</p>
+              <p class="news__txt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="news__item">
+              <div class="news__icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
+              <p class="news__title">LOREM IPSUM</p>
+              <p class="news__txt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="news__item">
+              <div class="news__icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
+              <p class="news__title">LOREM IPSUM</p>
+              <p class="news__txt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Prezentacja -->
-      <!-- <section class="section">
+      <section class="section about__mobile">
         <div class="container">
         <h2 class="section__txt">Czym się zajmujemy</h2>
         <ul class="about">
@@ -139,12 +152,14 @@
         <ul class="team">
           <li class="team__item">
             <figure>
-              <img
-                src="images/team1.jpg"
+              <picture>
+                <source media="(min-width:1200px)" srcset="images/team1.jpg" width="270px">
+                <source media="(min-width:768px)" srcset="images/team1-tablet.jpg" width="354px">
+                <img
+                src="images/team1-mobile.jpg"
                 alt="Product Designer"
-                width="270"
-                height="260"
-              />
+                width="450px"
+              /></picture>
               <figcaption>
                 <p class="team__name">John Doe</p>
                 <p class="team__job">Product Designer</p>
@@ -183,12 +198,15 @@
           </li>
           <li class="team__item">
             <figure>
+              <picture>
+              <source media="(min-width:1200px)" srcset="images/team2.jpg" width="270px">
+              <source media="(min-width:768px)" srcset="images/team2-tablet.jpg" width="354px">
               <img
-                src="images/team2.jpg"
+                src="images/team2-mobile.jpg"
                 alt="Frontend Developer"
-                width="270"
-                height="260"
-              />
+                width="450px"
+
+              /></picture>
               <figcaption>
                 <p class="team__name">John Doe</p>
                 <p class="team__job">Frontend Developer</p>
@@ -227,12 +245,15 @@
           </li>
           <li class="team__item">
             <figure>
+              <picture>
+                <source media="(min-width:1200px)" srcset="images/team3.jpg" width="270px">
+                <source media="(min-width:768px)" srcset="images/team3-tablet.jpg" width="354px">
               <img
-                src="images/team3.jpg"
+                src="images/team3-mobile.jpg"
                 alt="Marketing"
-                width="270"
-                height="260"
-              />
+                width="450"
+
+              /></picture>
               <figcaption>
                 <p class="team__name">John Doe</p>
                 <p class="team__job">Marketing</p>
@@ -271,11 +292,13 @@
           </li>
           <li class="team__item">
             <figure>
+              <picture>
+                <source media="(min-width:1200px)" srcset="images/team4.jpg" width="270px">
+                <source media="(min-width:768px)" srcset="images/team4-tablet.jpg" width="354px">
               <img
-                src="images/team4.jpg"
+                src="images/team4-mobile.jpg"
                 alt="UI Designer"
-                width="270"
-                height="260"
+                width="450"
               />
               <figcaption>
                 <p class="team__name">John Doe</p>
@@ -365,7 +388,7 @@
           </ul>
         </div>
       </div>
-      </section> -->
+      </section> 
     </main>
     <!-- Stopka -->
     <!-- <footer class="footer">
@@ -467,6 +490,36 @@
         </form>
       </div>
     </div> -->
+  <!-- Mobile menu -->
+    <div class="menu__mobile is-hidden" menu-mobile>
+      <div class="menu__mobile-modal">
+        <button type="button" class="menu__mobile-close" menu-mobile-close>
+          <svg class="modal__close-x">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <div class="menu__mobile-sites">
+          <ul class="menu__mobile-list">
+            <li class="menu__mobile-items"><a class="menu__mobile-links" href="./index.html">Agencja</a></li>
+            <li class="menu__mobile-items"><a class="menu__mobile-links" href="./portfolio.html">Portfolio</a></li>
+            <li class="menu__mobile-items"><a class="menu__mobile-links" href="#">Kontakt</a></li>
+          </ul>
+        </div>
+        <div class="menu__mobile-contacts">
+          <a class="menu__mobile-phone" href="tel:+48111111111">+48 111 111 111</a>
+          <a class="menu__mobile-email" href="mailto:info@devstudio.com">info@mdevstudio.com</a>
+        </div>
+        <div class="mobile__social">
+          <ul class="mobile__social-list">
+            <li class="mobile__social-item"><a class="mobile__social-link" href="#">Instagram</a></li>
+            <li class="mobile__social-item"><a class="mobile__social-link" href="#">Twitter</a></li>
+            <li class="mobile__social-item"><a class="mobile__social-link" href="#">Facebook</a></li>
+            <li class="mobile__social-item"><a class="mobile__social-link" href="#">LinkedIn</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <script src="./js/mobile.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
