--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 src="images/team4-mobile.jpg"
                 alt="UI Designer"
                 width="450"
-              />
+              /></picture>
               <figcaption>
                 <p class="team__name">John Doe</p>
                 <p class="team__job">UI Designer</p>
@@ -391,9 +391,10 @@
       </section> 
     </main>
     <!-- Stopka -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
-        <div>
+        <div class="footer__contacts">
+          <div class="footer__logo">
         <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
         <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
         <ul>
@@ -404,8 +405,8 @@
             <a href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
-        </div>
-        <div class="footer__social">
+          </div>
+          <div class="footer__social">
           <p class="join-us">Dołącz do nas</p>
           <ul class="footer__social-list">
             <li>
@@ -437,6 +438,7 @@
               </a>                              
             </li>
           </ul>
+          </div>
         </div>
         <div class="newsletter">
           <p class="join-us">Zapisz się do newslettera</p>
@@ -450,9 +452,9 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Modal -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
           <svg class="modal__close-x">
@@ -489,7 +491,7 @@
           </div>
         </form>
       </div>
-    </div> -->
+    </div>
   <!-- Mobile menu -->
     <div class="menu__mobile is-hidden" menu-mobile>
       <div class="menu__mobile-modal">
