--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,7 @@
             </li>
           </ul>
         </div>
+        <button type="button" class="menu__mobile-btn" menu-mobile-open><svg class="menu__mobile-icon"><use href="./images/icons.svg#mobile-menu"></use></svg></button>
       </div>
     </header>
     <!-- Strona -->
@@ -67,12 +68,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por1.jpg"
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por1.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por1-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por1-mobile.jpg"
                   alt="laptop view"
-                  width="370"
-                  height="294"
-                />
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -89,12 +92,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por2.jpg"
-                  alt="basketball players"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por2.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por2-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por2-mobile.jpg"
+                  alt="laptop view"
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -111,12 +116,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por3.jpg"
-                  alt="seafood restaurant logo"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por3.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por3-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por3-mobile.jpg"
+                  alt="laptop view"
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -133,12 +140,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por4.jpg"
-                  alt="headphones"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por4.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por4-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por4-mobile.jpg"
+                  alt="laptop view"
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -155,12 +164,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por5.jpg"
-                  alt="boxes"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por5.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por5-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por5-mobile.jpg"
+                  alt="laptop view"
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -177,12 +188,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por6.jpg"
-                  alt="monitor"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por6.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por6-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por6-mobile.jpg"
+                  alt="laptop view"
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -199,12 +212,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por7.jpg"
-                  alt="book"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por7.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por7-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por7-mobile.jpg"
+                  alt="laptop view"
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -221,12 +236,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por8.jpg"
-                  alt="product tag"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por8.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por8-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por8-mobile.jpg"
+                  alt="laptop view"
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -243,12 +260,14 @@
           <li class="portfolio__gallery-item">
             <figure>
               <div class="portfolio__gallery-box">
-                <img
-                  src="./images/por9.jpg"
-                  alt="man working on laptop"
-                  width="370"
-                  height="294"
-                />
+                <picture>
+                  <source media="(min-width:1200px)" srcset="./images/por9.jpg" width="370px">
+                  <source media="(min-width:768px)" srcset="./images/portfolio/por9-tablet.jpg" width="354px">
+                <img 
+                  src="./images/portfolio/por9-mobile.jpg"
+                  alt="laptop view"
+                  width="450"
+                /></picture>
                 <p class="portfolio__overflow">
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -269,7 +288,8 @@
     <!-- Stopka -->
     <footer class="footer">
       <div class="container">
-        <div>
+        <div class="footer__contacts">
+          <div class="footer__logo">
         <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
         <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
         <ul>
@@ -280,8 +300,8 @@
             <a href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
-        </div>
-        <div class="footer__social">
+          </div>
+          <div class="footer__social">
           <p class="join-us">Dołącz do nas</p>
           <ul class="footer__social-list">
             <li>
@@ -313,6 +333,7 @@
               </a>                              
             </li>
           </ul>
+          </div>
         </div>
         <div class="newsletter">
           <p class="join-us">Zapisz się do newslettera</p>
@@ -327,5 +348,35 @@
         </div>
       </div>
     </footer>
+      <!-- Mobile menu -->
+      <div class="menu__mobile is-hidden" menu-mobile>
+        <div class="menu__mobile-modal">
+          <button type="button" class="menu__mobile-close" menu-mobile-close>
+            <svg class="modal__close-x">
+              <use href="./images/icons.svg#close"></use>
+            </svg>
+          </button>
+          <div class="menu__mobile-sites">
+            <ul class="menu__mobile-list">
+              <li class="menu__mobile-items"><a class="menu__mobile-links" href="./index.html">Agencja</a></li>
+              <li class="menu__mobile-items"><a class="menu__mobile-links" href="./portfolio.html">Portfolio</a></li>
+              <li class="menu__mobile-items"><a class="menu__mobile-links" href="#">Kontakt</a></li>
+            </ul>
+          </div>
+          <div class="menu__mobile-contacts">
+            <a class="menu__mobile-phone" href="tel:+48111111111">+48 111 111 111</a>
+            <a class="menu__mobile-email" href="mailto:info@devstudio.com">info@mdevstudio.com</a>
+          </div>
+          <div class="mobile__social">
+            <ul class="mobile__social-list">
+              <li class="mobile__social-item"><a class="mobile__social-link" href="#">Instagram</a></li>
+              <li class="mobile__social-item"><a class="mobile__social-link" href="#">Twitter</a></li>
+              <li class="mobile__social-item"><a class="mobile__social-link" href="#">Facebook</a></li>
+              <li class="mobile__social-item"><a class="mobile__social-link" href="#">LinkedIn</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <script src="./js/mobile.js"></script>
   </body>
 </html>
